:sparkles: feat: Adiciona Mapping dos campos
